# internal/router/admin/employee.go
@@ -25,13 +25,13 @@ func (er *EmployeeRouter) InitApiRouter(router *gin.RouterGroup) {
 	{
 		publicRouter.POST("/login", employeeCtl.Login)
 		privateRouter.POST("/logout", employeeCtl.Logout)
+
 		privateRouter.POST("", employeeCtl.AddEmployee)
+		privateRouter.PUT("", employeeCtl.UpdateEmployee)
 
 		privateRouter.GET("/page", employeeCtl.PageQuery)
-
 		privateRouter.POST("/status/:status", employeeCtl.OnOrOff)
-		privateRouter.PUT("/editPassword", employeeCtl.EditPassword)
-		privateRouter.PUT("", employeeCtl.UpdateEmployee)
 		privateRouter.GET("/:id", employeeCtl.GetById)
+		privateRouter.PUT("/editPassword", employeeCtl.EditPassword)
 	}
 }
